Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1099,7 +1099,9 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "map(lambda x_values, m, b : )"
+   ]
   },
   {
    "cell_type": "code",
