Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1099,7 +1099,10 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def m_b_data:\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
