--- a/index.ipynb
+++ b/index.ipynb
@@ -1101,7 +1101,7 @@
    "outputs": [],
    "source": [
     "def m_b_data:\n",
-    "    list(map(lambda x_values, m, b : x_ ))"
+    "    list(map(lambda x_values, m, b : m * x_values ))"
    ]
   },
   {
