Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1101,7 +1101,8 @@
    "outputs": [],
    "source": [
     "def m_b_data:\n",
-    "    list(map(lambda x_values, m, b : m * x_values ))"
+    "    list(map(lambda x_values, m, b : m * x_values + b ))\n",
+    "    return {}"
    ]
   },
   {
