Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1102,7 +1102,7 @@
    "source": [
     "def m_b_data:\n",
     "    list(map(lambda x_values, m, b : m * x_values + b ))\n",
-    "    return {}"
+    "    return {x : x_val}"
    ]
   },
   {
