Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1100,7 +1100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def m_b_data:\n",
+    "def m_b_data(x_values, m, b):\n",
     "    list(map(lambda x_values, m, b : m * x_values + b ))\n",
     "    return {'x' : x_values}"
    ]
