--- a/index.ipynb
+++ b/index.ipynb
@@ -1101,7 +1101,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(x_values, m, b):\n",
-    "    y_values = list(map(lambda x : mm * x_values + b ))\n",
+    "    y_values = list(map(lambda x : m * x + b, x_values ))\n",
     "    return {'x' : x_values}"
    ]
   },
