Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1100,7 +1100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def m_b_data(m, b, x_values): #Define function and pass m,b\n",
+    "def m_b_data(m, b, x_values): #Define function and pass m,b and x_value list\n",
     "    y_values = list(map(lambda x: m*x + b, x_values))\n",
     "    return {'x': x_values, 'y': y_values}"
    ]
