Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1101,7 +1101,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values): #Define function and pass m,b and x_value list\n",
-    "    y_values = list(map(lambda x: m*x + b, x_values)) #create list of y values by using the map function to interate through akk\n",
+    "    y_values = list(map(lambda x: m*x + b, x_values)) #create list of y values by a lam\n",
     "    return {'x': x_values, 'y': y_values}"
    ]
   },
