--- a/index.ipynb
+++ b/index.ipynb
@@ -1139,6 +1139,7 @@
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
+    "    if mode = \n",
     "    pass"
    ]
   },
