Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1139,7 +1139,7 @@
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    values = m_b_data(m, b, x_values) #Create a dic\n",
+    "    values = m_b_data(m, b, x_values) # Since our previous function returns a dictiona\n",
     "    values.update ({'mode' : mode, 'name' : name})\n",
     "    return values"
    ]
