--- a/index.ipynb
+++ b/index.ipynb
@@ -1140,8 +1140,9 @@
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    values = m_b_data(m, b, x_values) # Since our previous function returns a dict\n",
-    "    # we create a variable called values to existing X & Y\n",
+    "    # we create a variable called values to existing X & Y keys\n",
     "    values.update ({'mode' : mode, 'name' : name})\n",
+    "    # we then do a simple\n",
     "    return values"
    ]
   },
