Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1142,7 +1142,7 @@
     "    values = m_b_data(m, b, x_values) # Since our previous function returns a dict\n",
     "    # we create a variable called values to existing X & Y keys\n",
     "    values.update ({'mode' : mode, 'name' : name})\n",
-    "    # we then do a simple\n",
+    "    # we then do a simple update that passes through the def\n",
     "    return values"
    ]
   },
