--- a/index.ipynb
+++ b/index.ipynb
@@ -1227,7 +1227,7 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    #slope = rise/run = x2 - x1 / "
+    "    #slope = rise/run = y2 - y1/ "
    ]
   },
   {
