--- a/index.ipynb
+++ b/index.ipynb
@@ -1227,7 +1227,8 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    #slope = rise/run = y2 - y1/ "
+    "    #slope = rise/run = y2 - y1/ x2 - x1\n",
+    "    slope = "
    ]
   },
   {
