--- a/index.ipynb
+++ b/index.ipynb
@@ -1228,7 +1228,8 @@
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    #slope = rise/run = y2 - y1/ x2 - x1\n",
-    "    rise = first_show('attendance') - second_show('attendance')"
+    "    rise = second_show('attendance') -  first_show('attendance') \n",
+    "    run = s"
    ]
   },
   {
