--- a/index.ipynb
+++ b/index.ipynb
@@ -1222,13 +1222,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    #slope = rise/run = y2 - y1/ x2 - x1\n",
-    "    slope = (second_show['attendance'] -  first_show['attendance']) / second_show['budget'] -  first_show('budget')\n",
+    "    slope = (second_show['attendance'] -  first_show['attendance']) / second_show['budget'] -  first_show['budget']\n",
     "    return slope"
    ]
   },
