--- a/index.ipynb
+++ b/index.ipynb
@@ -1335,7 +1335,7 @@
    "source": [
     "def sorted_points(x_values, y_values):\n",
     "    values = list(zip(x_values, y_values)) \n",
-    "    #creates a list called v\n",
+    "    #creates a tuple called values\n",
     "    sorted_values = sorted(values, key=lambda value: value[0])\n",
     "    return sorted_values"
    ]
