--- a/index.ipynb
+++ b/index.ipynb
@@ -1385,7 +1385,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    \n",
+    "    sorted_points()\n",
     "    pass"
    ]
   },
