--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1380,11 +1380,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
+    "    def slope(x_values, y_values):\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
     "    x1 = sorted_values[0][0]\n",
     "    y1 = sorted_values[0][1]\n",
