--- a/index.ipynb
+++ b/index.ipynb
@@ -1428,7 +1428,7 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    pa"
+    "    m = slope(x_val)"
    ]
   },
   {
