Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,14 +1432,26 @@
     "    sv = sorted_points(x_values, y_values)\n",
     "    x1 = sv[0][0]\n",
     "    y1 = sv[0][1]\n",
-    "    y = y1 - m*x1"
+    "    y = y1 - m*x1\n",
+    "    return y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_intercept([200, 400], [400, 700]) # 100"
    ]
